HTML and CSS formatting, plus directory name correction.

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -2,12 +2,9 @@ body {
     font-family: "Lato", sans-serif;
 }
 
-
-
-.main-head{
+.main-head {
     height: 150px;
     background: #FFF;
-
 }
 
 .sidenav {
@@ -17,31 +14,32 @@ body {
     padding-top: 20px;
 }
 
-
 .main {
-    padding: 0px 10px;
+    padding: 0 10px;
 }
 
 @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
+    .sidenav {
+        padding-top: 15px;
+    }
 }
 
 @media screen and (max-width: 450px) {
-    .login-form{
+    .login-form {
         margin-top: 10%;
     }
 
-    .register-form{
+    .register-form {
         margin-top: 10%;
     }
 }
 
-@media screen and (min-width: 768px){
-    .main{
+@media screen and (min-width: 768px) {
+    .main {
         margin-left: 40%;
     }
 
-    .sidenav{
+    .sidenav {
         width: 40%;
         position: fixed;
         z-index: 1;
@@ -49,32 +47,32 @@ body {
         left: 0;
     }
 
-    .login-form{
+    .login-form {
         margin-top: 80%;
     }
 
-    .register-form{
+    .register-form {
         margin-top: 20%;
     }
 }
 
 
-.login-main-text{
+.login-main-text {
     margin-top: 20%;
     padding: 60px;
     color: #fff;
 }
 
-.login-main-text h2{
+.login-main-text h2 {
     font-weight: 300;
 }
 
-.btn-black{
+.btn-black {
     background-color: #000 !important;
     color: #fff;
 }
 
-#errormsg{
+#errormsg {
     font-size: 20px;
     color: red;
 }
